# CG

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
demos/: sort_bubble.py  sort_bubble_full.py
src/algoviz/: __init__.py  cli.py
src/algoviz/backends/: __init__.py  gif_mpl.py  init.py  svg_svgwrite.py  tui_rich.py
src/algoviz/components/: __init__.py  arraybar.py
src/algoviz/core/: __init__.py  drawops.py  easing.py  scene.py  timeline.py
tests/: test_cli_gif_smoke.py  test_cli_svg_smoke.py  test_cli_tui_smoke.py  test_easing_interp.py  test_gif_backend.py  test_gif_slowdown_ms.py  test_sanity.py  test_svg_attrs.py  test_svg_backend.py  test_timeline_and_arraybar.py  test_tui_player_logic.py  test_tui_sidebar_capture.py
tests/artifacts/: .gitignore
